# hse_volatility_project

./: .env  .gitignore  EDA_options_spot.ipynb  None  README.md  Untitled1.ipynb  backtester.py  check_delta_hedge.ipynb  data_description.md  download_hourly_data.py  linear_model.ipynb  main.py  plan.md  plan_description.html  pyproject.toml  requirements.txt  static_data.py
.ipynb_checkpoints/: EDA_options_spot-checkpoint.ipynb  fasttext-checkpoint.ipynb  fasttext_single_2022-checkpoint.ipynb  fasttext_single_sources_dates-checkpoint.ipynb  fasttext_single_text-checkpoint.ipynb  linear_model-checkpoint.ipynb  ml_experiments-Copy1-checkpoint.ipynb  ml_model_spot-checkpoint.ipynb  ml_model_vol-checkpoint.ipynb
EDA/: EDA_Slava.txt
EDA_Tanya/: description.md  words.txt
backtester/: decrease_data_points.py  generate_spot_pnl.py  generate_synthetic_fx.py  main.py  save_backtesting_pnl.py  vol_diff_predictors.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
hse_vol_project_dl/: Copy_of_Copy_of_classifier-2.ipynb  Copy_of_Copy_of_classifier-3.ipynb  Copy_of_Copy_of_classifier-4.ipynb  Copy_of_bert4clssification_train_loop_v2-Copy1.ipynb  Copy_of_classifier.ipynb  bert_classifier.py  bert_regressor.py  final.ipynb  regressor.ipynb
linear_model/: linear_model_USDRUB_2022.ipynb
ml_experiments/: hse_vol_project_March2023.key
ml_experiments_ipynb/: _fasttext_single_sources_dates.ipynb  _ml_experiments-Copy1.ipynb  _ml_experiments.ipynb  fasttext.ipynb  fasttext_single_2022.ipynb  fasttext_single_sources_dates.ipynb  (+5 more)
(+95 files in other folders)
